; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_sil-sii8620.c_sii8620_hw_off.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_sil-sii8620.c_sii8620_hw_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sii8620 = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sii8620*)* @sii8620_hw_off to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sii8620_hw_off(%struct.sii8620* %0) #0 {
  %2 = alloca %struct.sii8620*, align 8
  store %struct.sii8620* %0, %struct.sii8620** %2, align 8
  %3 = load %struct.sii8620*, %struct.sii8620** %2, align 8
  %4 = getelementptr inbounds %struct.sii8620, %struct.sii8620* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @clk_disable_unprepare(i32 %5)
  %7 = load %struct.sii8620*, %struct.sii8620** %2, align 8
  %8 = getelementptr inbounds %struct.sii8620, %struct.sii8620* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @gpiod_set_value(i32 %9, i32 1)
  %11 = load %struct.sii8620*, %struct.sii8620** %2, align 8
  %12 = getelementptr inbounds %struct.sii8620, %struct.sii8620* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ARRAY_SIZE(i32 %13)
  %15 = load %struct.sii8620*, %struct.sii8620** %2, align 8
  %16 = getelementptr inbounds %struct.sii8620, %struct.sii8620* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @regulator_bulk_disable(i32 %14, i32 %17)
  ret i32 %18
}

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @gpiod_set_value(i32, i32) #1

declare dso_local i32 @regulator_bulk_disable(i32, i32) #1

declare dso_local i32 @ARRAY_SIZE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
